@@ -1,15 +1,24 @@
 {
-  "timestamp" : "2023-10-31T16:07:28Z",
+  "timestamp" : "2023-11-08T16:07:29Z",
   "count_outdated" : 295,
   "uniques_outdated" : 102,
-  "count" : 299,
-  "uniques" : 103,
+  "count" : 300,
+  "uniques" : 104,
   "views" : [
     {
       "timestamp": "2023-10-25T00:00:00Z",
       "count": 4,
       "count_minmax": [ 4, 4 ],
       "count_decinc": [ 0, 4 ],
+      "uniques": 1,
+      "uniques_minmax": [ 1, 1 ],
+      "uniques_decinc": [ 0, 1 ]
+    },
+    {
+      "timestamp": "2023-11-08T00:00:00Z",
+      "count": 1,
+      "count_minmax": [ 1, 1 ],
+      "count_decinc": [ 0, 1 ],
       "uniques": 1,
       "uniques_minmax": [ 1, 1 ],
       "uniques_decinc": [ 0, 1 ]
