@@ -1,10 +1,15 @@
 {
-  "count": 4,
-  "uniques": 1,
+  "count": 5,
+  "uniques": 2,
   "views": [
     {
       "timestamp": "2023-10-25T00:00:00Z",
       "count": 4,
+      "uniques": 1
+    },
+    {
+      "timestamp": "2023-11-08T00:00:00Z",
+      "count": 1,
       "uniques": 1
     }
   ]
